--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -138,7 +138,10 @@ body {
   height: 100%;
   border-radius: 50%;
   object-fit: cover;
+  
 }
+
+
 
 .profile-text {
   max-width: 500px;
@@ -437,11 +440,11 @@ p {
   height: 100vh;
   background-color: #f5f5f5;
   padding: 20px;
-  font-family: Arial, sans-serif;
+  /* font-family: Arial, sans-serif;
+ */
 }
-
 .main-heading {
-  font-size: 2.5rem;
+  font-size: 48px;
   font-weight: bold;
   margin-bottom: 130px;
   color: #d88a36;
@@ -690,10 +693,10 @@ button:hover {
   background-color: #b06a33;
 }
 
-
+/*flip boxes*/
 .main-heading {
   text-align: center;
-  font-size: 32px;
+  font-size: 48px;
   font-weight: bold;
   color: #e78c1c;
   margin-bottom: 30px;
