--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,7 +63,7 @@ body {
   font-size: 3rem;
 
   margin: 0;
-  color:#000000;
+  color: #000000;
 }
 
 .nav {
@@ -104,7 +104,7 @@ body {
     font-size: 1rem;
     padding: 6px 10px;
   }
-} 
+}
 
 /* Home Section */
 .profile-container {
@@ -138,7 +138,7 @@ body {
   height: 100%;
   border-radius: 50%;
   object-fit: cover;
-  
+
 }
 
 
@@ -147,7 +147,8 @@ body {
   max-width: 500px;
 }
 
-.profile-text h1,h2 {
+.profile-text h1,
+h2 {
   margin: 0;
   font-weight: 900;
   color: #333;
@@ -239,7 +240,8 @@ body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.home::before,.home::after {
+.home::before,
+.home::after {
   content: '';
   position: absolute;
   border-radius: 50%;
@@ -341,7 +343,7 @@ p {
   .description {
     font-size: 16px;
   }
-} 
+}
 
 /* Skills Section */
 .skills {
@@ -443,6 +445,7 @@ p {
   /* font-family: Arial, sans-serif;
  */
 }
+
 .main-heading {
   font-size: 48px;
   font-weight: bold;
@@ -476,7 +479,8 @@ p {
   transform: rotateY(180deg);
 }
 
-.flip-box-front,.flip-box-back {
+.flip-box-front,
+.flip-box-back {
   position: absolute;
   width: 100%;
   height: 120%;
@@ -563,7 +567,8 @@ form {
   flex-direction: column;
 }
 
-input,textarea {
+input,
+textarea {
   width: 100%;
   padding: 10px;
   margin: 10px 0;
@@ -596,11 +601,12 @@ button:hover {
     padding: 20px;
   }
 
-  .contact-left,.contact-right {
+  .contact-left,
+  .contact-right {
     max-width: 100%;
     margin-bottom: 20px;
   }
-} 
+}
 
 /*Social Media*/
 .social-icons a {
@@ -617,7 +623,7 @@ button:hover {
 .portfolio-container {
   padding: 20px;
   animation: fadeIn 1s ease-in;
-  background:linear-gradient(135deg,#f1cc89, #eebcf5);
+  background: linear-gradient(135deg, #f1cc89, #eebcf5);
 
 }
 
@@ -625,13 +631,13 @@ button:hover {
   font-size: 48px;
   margin-bottom: 30px;
   text-align: center;
-  color:#511242b5;
+  color: #511242b5;
 }
 
 .project-card {
-  width: 60%; 
-  padding: 15px; 
-  margin: 10px auto; 
+  width: 60%;
+  padding: 15px;
+  margin: 10px auto;
   background: #F7F2C4;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -654,28 +660,43 @@ button:hover {
 }
 
 @keyframes fadeIn {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 @keyframes slideUp {
-  0% { opacity: 0; transform: translateY(20px); }
-  100% { opacity: 1; transform: translateY(0); }
-} 
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
 /*Contact right form*/
 .contact-right form {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  align-items: center; /* Align all elements in center */
+  align-items: center;
+  /* Align all elements in center */
 }
 
 .contact-right input,
 .contact-right textarea,
 .contact-right button {
-  width: 100%; /* Ensures all elements have the same width */
-  max-width: 350px; /* Adjust as per your input field width */
+  width: 100%;
+  /* Ensures all elements have the same width */
+  max-width: 350px;
+  /* Adjust as per your input field width */
 }
 
 .contact-right button {
@@ -701,6 +722,7 @@ button:hover {
   color: #e78c1c;
   margin-bottom: 30px;
 }
+
 .flip-container {
   perspective: 1000px;
   display: flex;
