--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -296,7 +296,7 @@ p {
   margin-bottom: 15px;
 }
 
-/* .profile-image-container1 {
+.profile-image-container1 {
   position: relative;
   width: 250px;
   height: 250px;
@@ -317,14 +317,14 @@ p {
   object-fit: cover;
   border-radius: 20px;
   background-color: transparent;
-} */
+}
 
-.profile-image-container1 {
+/* .profile-image-container1 {
   position: relative;
   width: 250px;
   height: 250px;
   border-radius: 20%; /* Fully circular */
-  background-color: white;
+  /* background-color: white;
   
   border: 5px solid white;
   box-shadow: 0px 8px 16px rgba(255, 69, 0, 0.2);
@@ -333,7 +333,7 @@ p {
   justify-content: center;
   margin-left: 50px;
   overflow: hidden;
-}
+} */ 
 
 /* .profile-image1 {
   width: 100%;
@@ -342,15 +342,15 @@ p {
   border-radius: 50%; /* Match circular container */
   /* background-color: transparent;
 } */ 
-.profile-image1 {
+/* .profile-image1 {
   width: 100%;
   height: 100%;
   object-fit: contain; /* Change from 'cover' to 'contain' */
-  border-radius: 50%;
+  /* border-radius: 50%;
   background-color: white; /* Optional: matches border */
-  padding: 10px; /* Add inner spacing so face doesn't get cropped */
-}
-
+  /* padding: 10px; /* Add inner spacing so face doesn't get cropped */
+/* } */  
+ 
 
 @media (max-width: 768px) {
   .content-section {
